--- a/elements.html
+++ b/elements.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML>
+DEV-EMERSONJR<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Elements - Retrospect by TEMPLATED</title>
+		<title>Elements - DEV-EMERSONJR by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-				<h1><a href="index.html">Retrospect</a></h1>
+				<h1><a href="index.html">DEV-EMERSONJR</a></h1>
 				<a href="#nav">Menu</a>
 			</header>
 
