--- a/index.html
+++ b/index.html
@@ -1,166 +1,147 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>DEV-EMERSONJR by TEMPLATED</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="landing">
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<h1><a href="index.html">DEV-EMERSONJR</a></h1>
-				<a href="#nav">Menu</a>
+<head>
+	<title>DEV-EMERSONJR by TEMPLATED</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
+
+<body class="landing">
+
+	<!-- Header -->
+	<header id="header" class="alt">
+		<h1><a href="index.html">DEV-EMERSONJR</a></h1>
+		<a href="#nav">Navegação</a>
+	</header>
+
+	<!-- Nav -->
+	<nav id="nav">
+		<ul class="links">
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="generic.html">Profesor</a></li>
+			<li><a href="elements.html">Blogss</a></li>
+		</ul>
+	</nav>
+
+	<!-- Banner -->
+	<section id="banner">
+		<i class="icon fa-diamond"></i>
+		<h2>Treinamentos em informática</h2>
+		<p>Clique para conhecer nossos cursos </p>
+		<ul class="actions">
+			<li><a href="#" class="button big special">Saiba mais</a></li>
+		</ul>
+	</section>
+
+	<!-- One -->
+	<section id="one" class="wrapper style1">
+		<div class="inner">
+			<article class="feature left">
+				<span class="image"><img src="img/office.png" alt="Curso de Pacote office Essencial" /></span>
+				<div class="content">
+					<h2>GOSTARIA DE MELHORAR SUAS CHANCES NO MERCADO DE TRABALHO?</h2>
+					<p>Conheça os cursos mais completos de Pacote Office disponíveis no mercado! <br>
+						Tudo sobre Word, Excel e PowerPoint.<br>
+						Essencial para Mercado de Trabalho.<br>
+						Aqui você encontra um treinamento completo totalmente on-line e com suporte tira-dúvidas.<br>
+						Fornecemos certificado de Conclusão. <br></p>
+					<ul class="actions">
+						<li>
+							<a href="#" class="button alt">Saiba mais</a>
+						</li>
+					</ul>
+				</div>
+			</article>
+			<article class="feature right">
+				<span class="image"><img src="img/web.png" alt="Curso de Programação Front-End" /></span>
+				<div class="content">
+					<h2>CURSO COMPLETO DE PROGRAMAÇÃO WEB COM PHP PARA INICIANTES</h2>
+					<p>Aprenda tudo sobre as linguagens de marcação HTML5 e CSS3 para desenvolvimento de Sites e trabalhe como Desenvolvedor Front - End. <br>
+						Aprenda também como Programar em PHP e desenvolva aplicações dinâmicas para seus sites.<br>
+						Tudo do absoluto ZERO para você que nunca teve contato com Linguagens de Programação.<br></p>
+					<ul class="actions">
+						<li>
+							<a href="#" class="button alt">Saiba mais</a>
+						</li>
+					</ul>
+				</div>
+			</article>
+		</div>
+	</section>
+
+	<!-- Two -->
+	<section id="two" class="wrapper special">
+		<div class="inner">
+			<header class="major narrow">
+				<h2>CURSOS DE INFORMÁTICA</h2>
+				<p>CONHEÇA NOSSO CATÁLOGO DE CURSOS, ESTAMOS SEMPRE NA LISTA DE MELHORES AVALIAÇÕES NAS PLATAFORMAS MAIS FAMOSAS DE TREINAMENTOS ON-LINE.
+				</p>
 			</header>
+			<div class="image-grid">
+				<a href="#" class="image"><img src="img/prop1.png" alt="Web" /></a>
+				<a href="#" class="image"><img src="img/prop2.png" alt="WordPress" /></a>
+				<a href="#" class="image"><img src="img/prop3.png" alt="Aplicativos" /></a>
+				<a href="#" class="image"><img src="img/prop4.png" alt="Análise de dados" /></a>
+				<a href="#" class="image"><img src="img/prop5.png" alt="Análise de dados" /></a>
+				<a href="#" class="image"><img src="img/prop6.png" alt="Youtube" /></a>
+				<a href="#" class="image"><img src="img/prop7.png" alt="Bootstrap" /></a>
+				<a href="#" class="image"><img src="img/prop8.png" alt="Dreamweaver" /></a>
+			</div>
+			<ul class="actions">
+				<li><a href="#" class="button big alt">Clique e saiba mais</a></li>
+			</ul>
+		</div>
+	</section>
 
-		<!-- Nav -->
-			<nav id="nav">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
-				</ul>
-			</nav>
+	<!-- Three -->
+	<section id="three" class="wrapper style3 special">
+		<div class="inner">
+			<header class="major narrow	">
+				<h2>TECTREINAMENTOS INFORMÁTICA</h2>
+				<p>O FUTURO É AGORA!</p>
+			</header>
+			<ul class="actions">
+				<li><a href="#" class="button big alt">PROF. WAGNER CARDOSO</a></li>
+			</ul>
+		</div>
+	</section>
 
-		<!-- Banner -->
-			<section id="banner">
-				<i class="icon fa-diamond"></i>
-				<h2>Etiam adipiscing</h2>
-				<p>Magna feugiat lorem dolor egestas</p>
-				<ul class="actions">
-					<li><a href="#" class="button big special">Learn More</a></li>
-				</ul>
-			</section>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="#" class="icon fa-facebook">
+						<span class="label">Facebook</span>
+					</a></li>
+				<li><a href="#" class="icon fa-twitter">
+						<span class="label">Twitter</span>
+					</a></li>
+				<li><a href="#" class="icon fa-instagram">
+						<span class="label">Instagram</span>
+					</a></li>
+				<li><a href="#" class="icon fa-linkedin">
+						<span class="label">LinkedIn</span>
+					</a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Untitled.</li>
+				<li>Design: <a href="http://designscrazed.org/">DEV-EMERSONJR</a>.</li>
+			</ul>
+		</div>
+	</footer>
 
-		<!-- One -->
-			<section id="one" class="wrapper style1">
-				<div class="inner">
-					<article class="feature left">
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
-						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
-							<ul class="actions">
-								<li>
-									<a href="#" class="button alt">More</a>
-								</li>
-							</ul>
-						</div>
-					</article>
-					<article class="feature right">
-						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
-						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
-							<ul class="actions">
-								<li>
-									<a href="#" class="button alt">More</a>
-								</li>
-							</ul>
-						</div>
-					</article>
-				</div>
-			</section>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
 
-		<!-- Two -->
-			<section id="two" class="wrapper special">
-				<div class="inner">
-					<header class="major narrow">
-						<h2>Aliquam Blandit Mauris</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
-					</header>
-					<div class="image-grid">
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
-					</div>
-					<ul class="actions">
-						<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
-					</ul>
-				</div>
-			</section>
+</body>
 
-		<!-- Three -->
-			<section id="three" class="wrapper style3 special">
-				<div class="inner">
-					<header class="major narrow	">
-						<h2>Magna sed consequat tempus</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
-					</header>
-					<ul class="actions">
-						<li><a href="#" class="button big alt">Magna feugiat</a></li>
-					</ul>
-				</div>
-			</section>
-
-		<!-- Four -->
-			<section id="four" class="wrapper style2 special">
-				<div class="inner">
-					<header class="major narrow">
-						<h2>Get in touch</h2>
-						<p>Ipsum dolor tempus commodo adipiscing</p>
-					</header>
-					<form action="#" method="POST">
-						<div class="container 75%">
-							<div class="row uniform 50%">
-								<div class="6u 12u$(xsmall)">
-									<input name="name" placeholder="Name" type="text" />
-								</div>
-								<div class="6u$ 12u$(xsmall)">
-									<input name="email" placeholder="Email" type="email" />
-								</div>
-								<div class="12u$">
-									<textarea name="message" placeholder="Message" rows="4"></textarea>
-								</div>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" class="special" value="Submit" /></li>
-							<li><input type="reset" class="alt" value="Reset" /></li>
-						</ul>
-					</form>
-				</div>
-			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
-							<span class="label">Facebook</span>
-						</a></li>
-						<li><a href="#" class="icon fa-twitter">
-							<span class="label">Twitter</span>
-						</a></li>
-						<li><a href="#" class="icon fa-instagram">
-							<span class="label">Instagram</span>
-						</a></li>
-						<li><a href="#" class="icon fa-linkedin">
-							<span class="label">LinkedIn</span>
-						</a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled.</li>
-						<li>Design: <a href="http://designscrazed.org/">TEMPLATE</a>.</li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
 </html>
