--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<nav id="nav">
 		<ul class="links">
 			<li><a href="index.html">Inicio</a></li>
-			<li><a href="generic.html">Profesor</a></li>
-			<li><a href="elements.html">Blogss</a></li>
+			<li><a href="professor.html">Profesor</a></li>
+			<li><a href="blogs.html">Blogs</a></li>
 		</ul>
 	</nav>
 
@@ -34,7 +34,7 @@
 		<h2>Treinamentos em informática</h2>
 		<p>Clique para conhecer nossos cursos </p>
 		<ul class="actions">
-			<li><a href="#" class="button big special">Saiba mais</a></li>
+			<li><a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="button big special">Saiba mais</a></li>
 		</ul>
 	</section>
 
@@ -52,7 +52,7 @@
 						Fornecemos certificado de Conclusão. <br></p>
 					<ul class="actions">
 						<li>
-							<a href="#" class="button alt">Saiba mais</a>
+							<a href="https://www.udemy.com/course/pacote-office-essencial/?referralCode=834CC17614F118EE908D" class="button alt">Saiba mais</a>
 						</li>
 					</ul>
 				</div>
@@ -66,7 +66,7 @@
 						Tudo do absoluto ZERO para você que nunca teve contato com Linguagens de Programação.<br></p>
 					<ul class="actions">
 						<li>
-							<a href="#" class="button alt">Saiba mais</a>
+							<a href="https://www.udemy.com/course/programacao-web/?referralCode=813E21514CE5E44D6112" class="button alt">Saiba mais</a>
 						</li>
 					</ul>
 				</div>
@@ -83,14 +83,14 @@
 				</p>
 			</header>
 			<div class="image-grid">
-				<a href="#" class="image"><img src="img/prop1.png" alt="Web" /></a>
-				<a href="#" class="image"><img src="img/prop2.png" alt="WordPress" /></a>
-				<a href="#" class="image"><img src="img/prop3.png" alt="Aplicativos" /></a>
-				<a href="#" class="image"><img src="img/prop4.png" alt="Análise de dados" /></a>
-				<a href="#" class="image"><img src="img/prop5.png" alt="Análise de dados" /></a>
-				<a href="#" class="image"><img src="img/prop6.png" alt="Youtube" /></a>
-				<a href="#" class="image"><img src="img/prop7.png" alt="Bootstrap" /></a>
-				<a href="#" class="image"><img src="img/prop8.png" alt="Dreamweaver" /></a>
+				<a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="image"><img src="img/prop1.png" alt="Web" /></a>
+				<a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="image"><img src="img/prop2.png" alt="WordPress" /></a>
+				<a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="image"><img src="img/prop3.png" alt="Aplicativos" /></a>
+				<a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="image"><img src="img/prop4.png" alt="Análise de dados" /></a>
+				<a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="image"><img src="img/prop5.png" alt="Análise de dados" /></a>
+				<a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="image"><img src="img/prop6.png" alt="Youtube" /></a>
+				<a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="image"><img src="img/prop7.png" alt="Bootstrap" /></a>
+				<a href="https://www.udemy.com/user/wagner-da-silva-cardoso/" class="image"><img src="img/prop8.png" alt="Dreamweaver" /></a>
 			</div>
 			<ul class="actions">
 				<li><a href="#" class="button big alt">Clique e saiba mais</a></li>
@@ -106,7 +106,7 @@
 				<p>O FUTURO É AGORA!</p>
 			</header>
 			<ul class="actions">
-				<li><a href="#" class="button big alt">PROF. WAGNER CARDOSO</a></li>
+				<li><a href="professor.html" class="button big alt">PROF. WAGNER CARDOSO</a></li>
 			</ul>
 		</div>
 	</section>
@@ -115,11 +115,8 @@
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="#" class="icon fa-facebook">
+				<li><a href="https://www.facebook.com/tectreinamentos/" class="icon fa-facebook">
 						<span class="label">Facebook</span>
-					</a></li>
-				<li><a href="#" class="icon fa-twitter">
-						<span class="label">Twitter</span>
 					</a></li>
 				<li><a href="#" class="icon fa-instagram">
 						<span class="label">Instagram</span>
