--- a/blogs.html
+++ b/blogs.html
@@ -7,6 +7,7 @@
 	<title>DEV-EMERSONJR</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -15,8 +16,8 @@
 	<div class="container-sm">
 
 		<h1>BLOGS</h1>
-
 		<p>Conheça nossos conteudos mensais</p>
+		<a href="index.html">Voltar ao inicio</a>
 		<hr>
 
 		<div id="carouselExample" class="carousel slide">
