--- a/professor.html
+++ b/professor.html
@@ -1,42 +1,106 @@
-<!DOCTYPE HTML>
-<html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/css/style.css">
 
-<head>
-	<title>Generic - DEV-EMERSONJR by TEMPLATED</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-</head>
+  </head>
+  <body>
+    <div class="container">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Inicio</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Blogs</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Professor</button>
+            </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0"><strong>Inicio: Volte para o inicio do site</strong></div>
+            <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"><strong>Meus blogs - Conheça meus blogs de conteúdo</strong></div>
+            <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0"><strong>Você está na página: Tudo sobre o instrutor</strong>></div>
+          </div>
+          <hr>
+        <div class="row">
+            <div class="col-md-3">
+				<img src="img/wagner2.jpg" style="width: 19rem;" alt="" srcset="" class="rounded-circle">
+                <h5>PROF.WAGNER CARDOSO</h5>
+            </div>
+            <div class="col-md-9">
+                
+				<blockquote class="blockquote text-center"><strong><h2> Sobre </h2></strong></blockquote>
+				<blockquote class="blockquote text-justify">
 
-<body>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem asperiores magni quam similique aut accusamus magnam repudiandae vel, debitis porro. Impedit accusantium quam sed at blanditiis molestiae a architecto cupiditate?
+					<br>
+					<br>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde accusamus ut natus tenetur aliquid incidunt nesciunt voluptatum in sunt porro sapiente dolorem, qui soluta, repudiandae commodi molestiae non explicabo delectus?
+					<br>
+					<br>
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores optio repellat porro nobis incidunt explicabo illo, illum consequuntur accusantium minima, alias, distinctio iste eaque placeat ad. Ad nisi magnam libero.
+					<br>
+					<br>
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus corrupti veniam temporibus dolore, iste eius delectus nam expedita mollitia ipsa repellendus voluptates officiis quaerat culpa, autem cumque, dolorem aut voluptas!
 
+				</blockquote>
+
+				<div class="d-grid gap-2">
+					<button class="btn btn-primary" type="button">LinkedIn</button>
+					<button class="btn btn-primary" type="button">Instagram</button>
+					<button type="button" class="btn btn-outline-success">Whatsapp</button>
+				  </div>
+
+            </div>
+        </div>
+    </div>
+	<br>
+	<hr>
 	<div class="container">
 
-		<nav>
-			<div class="nav nav-tabs" id="nav-tab" role="tablist">
-			  <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
-			  <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Perfil</a>
-			  <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contato</a>
+		<div class="card-group">
+			<div class="card">
+			  <img src="img/prop1.png" class="card-img-top" alt="...">
+			  <div class="card-body">
+				<h5 class="card-title">Card title</h5>
+				<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta qui repellat numquam a. Incidunt amet minima ducimus at numquam quo officia aut, unde iste fugiat accusantium? Rem aliquam labore itaque.</p>
+				<p class="card-text"><small class="text-body-secondary">Atualizado semanalmente</small></p>
+			  </div>
 			</div>
-		  </nav>
-		  <div class="tab-content" id="nav-tabContent">
-			<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">Inicio</div>
-			<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">Meu Blogs</div>
-			<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">você está nesta página</div>
+			<div class="card">
+			  <img src="img/prop2.png" class="card-img-top" alt="...">
+			  <div class="card-body">
+				<h5 class="card-title">Card title!</h5>
+				<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo velit accusamus aspernatur ipsum possimus vero tenetur quibusdam porro non voluptatibus! Fugit iure facere ex eum voluptatum quisquam quos! Numquam, asperiores.</p>
+				<p class="card-text"><small class="text-body-secondary">Atualizado semanalmente</small></p>
+			  </div>
+			</div>
+			<div class="card">
+			  <img src="img/prop3.png" class="card-img-top" alt="...">
+			  <div class="card-body">
+				<h5 class="card-title">Card title</h5>
+				<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae id, aspernatur quaerat modi facere provident nostrum necessitatibus commodi tempore accusamus numquam, optio repellat, doloribus velit rerum aperiam. Ipsum, est veniam?</p>
+				<p class="card-text"><small class="text-body-secondary">Atualizado semanalmente</small></p>
+			  </div>
+			</div>
 		  </div>
+
+		  <br>
+		  <hr>
+		  <blockquote class="blockquote text-center">
+			<p>&copy; Clear Cloud.</p>
+			<footer class="blockquote-footer">
+			  Someone famous in <cite title="Source Title">Source Title</cite>
+			</footer>
+		  </blockquote>
 
 	</div>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="assets/js/main.js"></script>
-
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  </body>
 </html>
